# wow-dmg-simulator

./: .gitignore  CLAUDE.md  README.md  first-prompt.md  index.html  package.json  pnpm-lock.yaml  simc-version.json  sprint-status.md  vite.config.ts
.github/workflows/: build.yml  check-simc-update.yml
docs/: architecture.md  build-item-db.md  decisions.md  epic9-auto-update.md  epic9-github-releases.md  epic9-macos-codesigning.md  epic9-release-builds.md  epic9-release-instructions.md  extensibility.md  features.md  gem-enchant-axis.md  item-data.md  item-search.md  profileset-builder.md  real-simc-string-with-vault.txt  real-simc-string.txt  simc-cli-reference.md  simc-string-format.md  simc-wiki-reference.md  smart-sim-implementation.md  smart-sim.md  tauri-build.md  ui-ux.md  updating-seasons.md
docs/droptimizer-research/: 01-snapshot.txt  02-snapshot.txt  03-snapshot.txt  04-snapshot.txt  05-snapshot.txt  06-snapshot.txt  07-snapshot.txt  08-snapshot.txt  09-snapshot.txt  notes.md
example-scripts/: package-example.json  season-config.ts  validate-season.ts
scripts/: build-item-db.ts  build-loot-db.ts  download-simc.sh  validate-season.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  item_data.rs  mod.rs  run_simc.rs
src/components/: AppFooter.tsx  AppSettingsPanel.tsx  CatalystCharges.tsx  CombinationCounter.test.tsx  CombinationCounter.tsx  CopyModifyDropdown.tsx  DropFinderItemList.tsx  DropFinderPanel.tsx  DropFinderResults.tsx  DroptimizerItemList.tsx  (+24 more)
(+47 files in other folders)
