[package]
name = "wow-gear-sim"
version = "0.2.0"
description = "WoW Gear Sim — Local SimulationCraft Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "wow_gear_sim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
tauri-plugin-mcp-bridge = "0.10"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
